--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,11 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
+    <ImageButton
         android:id="@+id/btEnvoyer"
-        android:layout_width="163dp"
-        android:layout_height="150dp"
+        android:layout_width="155dp"
+        android:layout_height="136dp"
+        android:src="@mipmap/ic_launcher"
         android:text="ON"
         android:theme="@style/Theme.ChauffeEau"
         app:layout_constraintBottom_toBottomOf="parent"
